--- a/aws/PAS-Component-Single-Deployment.yaml
+++ b/aws/PAS-Component-Single-Deployment.yaml
@@ -86,7 +86,7 @@ Resources:
     DeletionPolicy: Retain
   PVWAAmi:
     Type: Custom::FindAMI
-    Condition: CreatePVWACondition
+    Condition: PVWACustomImageEmpty
     Properties:
       ServiceToken: !GetAtt GetLatestAMILambda.Arn
       Version: "13.2"
@@ -97,7 +97,7 @@ Resources:
       - LambdaDeployRole
   CPMAmi:
     Type: Custom::FindAMI
-    Condition: CreateCPMCondition
+    Condition: CPMCustomImageEmpty
     Properties:
       ServiceToken: !GetAtt GetLatestAMILambda.Arn
       Version: "13.2"
@@ -108,7 +108,7 @@ Resources:
       - LambdaDeployRole
   PSMAmi:
     Type: Custom::FindAMI
-    Condition: CreatePSMCondition
+    Condition: PSMCustomImageEmpty
     Properties:
       ServiceToken: !GetAtt GetLatestAMILambda.Arn
       Version: "13.2"
@@ -119,7 +119,7 @@ Resources:
       - LambdaDeployRole
   PSMPAmi:
     Type: Custom::FindAMI
-    Condition: CreatePSMPCondition
+    Condition: PSMPCustomImageEmpty
     Properties:
       ServiceToken: !GetAtt GetLatestAMILambda.Arn
       Version: "13.2"
@@ -130,7 +130,7 @@ Resources:
       - LambdaDeployRole
   PTAAmi:
     Type: Custom::FindAMI
-    Condition: CreatePTACondition
+    Condition: PTACustomImageEmpty
     Properties:
       ServiceToken: !GetAtt GetLatestAMILambda.Arn
       Version: "13.2"
@@ -841,7 +841,8 @@ Resources:
               group: root
           commands:
             01_install_cwlogs:
-              command: yum install -y https://s3.amazonaws.com/amazoncloudwatch-agent/redhat/amd64/latest/amazon-cloudwatch-agent.rpm
+              command: !Sub >-
+                sudo rpm -U https://amazoncloudwatch-agent-${AWS::Region}.s3.${AWS::Region}.amazonaws.com/redhat/amd64/latest/amazon-cloudwatch-agent.rpm
             02_start_awslogs:
               command: sudo /opt/aws/amazon-cloudwatch-agent/bin/amazon-cloudwatch-agent-ctl -a fetch-config -m ec2 -c file:/opt/aws/amazon-cloudwatch-agent/bin/config.json -s
         install_psmp:
@@ -851,11 +852,9 @@ Resources:
                 - >-
                   TOKEN=$(curl -X PUT "http://169.254.169.254/latest/api/token"
                   -H "X-aws-ec2-metadata-token-ttl-seconds:3600") &&
-                  /opt/CD-Image/register-arguments.sh Administrator
-                  "${StoreAdminPassword.SsmId}" ${AWS::Region}
-                  "${VaultIpAddress}"  $(curl -H
-                  "X-aws-ec2-metadata-token:$TOKEN" -v
-                  http://169.254.169.254/latest/meta-data/instance-id) ec2-user
+                  /opt/CD-Image/register.sh aws "${VaultIpAddress}"
+                  $(curl -H "X-aws-ec2-metadata-token:$TOKEN" -v http://169.254.169.254/latest/meta-data/instance-id)
+                  ec2-user Administrator ${AWS::Region} "${StoreAdminPassword.SsmId}"
                 - VaultIpAddress: !If
                   - DRValueEmpty
                   - !Sub '${VaultPrivateIP}'
@@ -956,7 +955,8 @@ Resources:
               group: root
           commands:
             01_install_cloudwatch_agent:
-              command: sudo rpm -U https://s3.amazonaws.com/amazoncloudwatch-agent/redhat/amd64/latest/amazon-cloudwatch-agent.rpm
+              command: !Sub >-
+                sudo rpm -U https://amazoncloudwatch-agent-${AWS::Region}.s3.${AWS::Region}.amazonaws.com/redhat/amd64/latest/amazon-cloudwatch-agent.rpm
             02_start_cloudwatch_agent:
               command: sudo /opt/aws/amazon-cloudwatch-agent/bin/amazon-cloudwatch-agent-ctl -a fetch-config -m ec2 -c file:/opt/aws/amazon-cloudwatch-agent/bin/config.json -s
         install_pta:
@@ -964,6 +964,7 @@ Resources:
             01-executeptaconfigurationscript: 
               command: !Sub >-
                 sudo /tmp/register.sh aws "${VaultPrivateIP}" "${PVWAPrivateDNS}" "${VaultAdminUser}" "${StoreAdminPassword.SsmId}" ${AWS::Region} "${DRPrivateIP}"
+            99-SignalCompletion:
               command: !Sub >-
                 cfn-signal -e $? --stack ${AWS::StackId} --resource PTAMachine --region ${AWS::Region}
     Condition: CreatePTACondition
@@ -1113,13 +1114,15 @@ Parameters:
     Type: String
     Description: Select the instance type of the Component instance.
     AllowedValues:
-      - m5.large
+      - c5.xlarge
       - m5.xlarge
+      - c5.2xlarge
       - m5.2xlarge
+      - c5.4xlarge
       - m5.4xlarge
-      - t3.medium
-      - c5.large
-    Default: m5.large
+      - c5.9xlarge
+      - m5.8xlarge
+    Default: c5.xlarge
   ComponentInstanceSecurityGroups:
     Type: List<AWS::EC2::SecurityGroup::Id>
     Description: Assign Security Groups to the Component instance.
@@ -1216,6 +1219,21 @@ Conditions:
   CustomImageEmpty: !Equals
     - ''
     - !Ref ComponentCustomAmi
+  PVWACustomImageEmpty: !And
+    - !Condition CreatePVWACondition
+    - !Condition CustomImageEmpty
+  CPMCustomImageEmpty: !And
+    - !Condition CreateCPMCondition
+    - !Condition CustomImageEmpty
+  PSMCustomImageEmpty: !And
+    - !Condition CreatePSMCondition
+    - !Condition CustomImageEmpty
+  PSMPCustomImageEmpty: !And
+    - !Condition CreatePSMPCondition
+    - !Condition CustomImageEmpty
+  PTACustomImageEmpty: !And
+    - !Condition CreatePTACondition
+    - !Condition CustomImageEmpty
   DRValueEmpty: !Equals
     - ''
     - !Ref DRPrivateIP
