POC-584: update runtime

--- a/aws/PAS-AIO-DR-Deployment.yaml
+++ b/aws/PAS-AIO-DR-Deployment.yaml
@@ -566,7 +566,7 @@ Resources:
               except Exception as E:
                   print (E)
                   return cfnresponse.send(event, context, cfnresponse.FAILED, {}, physicalResourceId)
-      Runtime: python3.7
+      runtime: python3.12
       Handler: index.lambda_handler
       Timeout: 60
       Role: !GetAtt 'LambdaDeployRole.Arn'
@@ -599,7 +599,7 @@ Resources:
               except Exception as E:
                   print (E)
                   return cfnresponse.send(event, context, cfnresponse.FAILED, {}, physicalResourceId)
-      Runtime: python3.7
+      runtime: python3.12
       Handler: index.lambda_handler
       Timeout: 60
       Role: !GetAtt 'LambdaDeployRole.Arn'
@@ -672,7 +672,7 @@ Resources:
             elif event['RequestType'] == 'Delete':
               print("Deleting AWS CloudFormation")
               return cfnresponse.send(event, context, cfnresponse.SUCCESS, {}, physicalResourceId)
-      Runtime: python3.7
+      runtime: python3.12
       Handler: index.lambda_handler
       Timeout: 60
       Role: !GetAtt 'LambdaRemovePermissionsRole.Arn'
@@ -723,7 +723,7 @@ Resources:
             except:
               traceback.print_last()
               cfnresponse.send(event, context, cfnresponse.FAIL, {}, "An error occured, please refer to the last exception")
-      Runtime: python3.7
+      runtime: python3.12
       Handler: index.handler
       Timeout: 60
       Role: !GetAtt LambdaDeployRole.Arn
