--- a/aws/DRVault-Single-Deployment.yaml
+++ b/aws/DRVault-Single-Deployment.yaml
@@ -258,7 +258,7 @@ Resources:
                   return cfnresponse.send(event, context, cfnresponse.FAILED, {}, physicalResourceId)
 
 
-      runtime: python3.12
+      Runtime: python3.12
       Handler: index.lambda_handler
       Timeout: 60
       Role: !GetAtt 'LambdaDeployRole.Arn'
@@ -292,7 +292,7 @@ Resources:
                   print (E)
                   return cfnresponse.send(event, context, cfnresponse.FAILED, {}, physicalResourceId)
 
-      runtime: python3.12
+      Runtime: python3.12
       Handler: index.lambda_handler
       Timeout: 60
       Role: !GetAtt 'LambdaDeployRole.Arn'
@@ -364,7 +364,7 @@ Resources:
             elif event['RequestType'] == 'Delete':
               print("Deleting AWS CloudFormation")
               return cfnresponse.send(event, context, cfnresponse.SUCCESS, {}, physicalResourceId)
-      runtime: python3.12
+      Runtime: python3.12
       Handler: index.lambda_handler
       Timeout: 60
       Role: !GetAtt 'LambdaRemovePermissionsRole.Arn'
@@ -415,7 +415,7 @@ Resources:
             except:
               traceback.print_last()
               cfnresponse.send(event, context, cfnresponse.FAIL, {}, "An error occured, please refer to the last exception")
-      runtime: python3.12
+      Runtime: python3.12
       Handler: index.handler
       Timeout: 60
       Role: !GetAtt LambdaDeployRole.Arn
