--- a/aws/Full-PAS-Deployment.yaml
+++ b/aws/Full-PAS-Deployment.yaml
@@ -613,7 +613,7 @@ Resources:
               except Exception as E:
                   print (E)
                   return cfnresponse.send(event, context, cfnresponse.FAILED, {}, physicalResourceId)
-      runtime: python3.12
+      Runtime: python3.12
       Handler: index.lambda_handler
       Timeout: 60
       Role: !GetAtt LambdaDeployRole.Arn
@@ -646,7 +646,7 @@ Resources:
               except Exception as E:
                   print (E)
                   return cfnresponse.send(event, context, cfnresponse.FAILED, {}, physicalResourceId)
-      runtime: python3.12
+      Runtime: python3.12
       Handler: index.lambda_handler
       Timeout: 60
       Role: !GetAtt LambdaDeployRole.Arn
@@ -719,7 +719,7 @@ Resources:
             elif event['RequestType'] == 'Delete':
               print("Deleting AWS CloudFormation")
               return cfnresponse.send(event, context, cfnresponse.SUCCESS, {}, physicalResourceId)
-      runtime: python3.12
+      Runtime: python3.12
       Handler: index.lambda_handler
       Timeout: 60
       Role: !GetAtt 'LambdaRemovePermissionsRole.Arn'
@@ -770,7 +770,7 @@ Resources:
             except:
               traceback.print_last()
               cfnresponse.send(event, context, cfnresponse.FAIL, {}, "An error occured, please refer to the last exception")
-      runtime: python3.12
+      Runtime: python3.12
       Handler: index.handler
       Timeout: 60
       Role: !GetAtt LambdaDeployRole.Arn
