--- a/aws/Vault-Single-Deployment.yaml
+++ b/aws/Vault-Single-Deployment.yaml
@@ -317,7 +317,7 @@ Resources:
               except Exception as E:
                   print (E)
                   return cfnresponse.send(event, context, cfnresponse.FAILED, {}, physicalResourceId)
-      runtime: python3.12
+      Runtime: python3.12
       Handler: index.lambda_handler
       Timeout: 60
       Role: !GetAtt 'LambdaDeployRole.Arn'
@@ -350,7 +350,7 @@ Resources:
               except Exception as E:
                   print (E)
                   return cfnresponse.send(event, context, cfnresponse.FAILED, {}, physicalResourceId)
-      runtime: python3.12
+      Runtime: python3.12
       Handler: index.lambda_handler
       Timeout: 60
       Role: !GetAtt 'LambdaDeployRole.Arn'
@@ -423,7 +423,7 @@ Resources:
             elif event['RequestType'] == 'Delete':
               print("Deleting AWS CloudFormation")
               return cfnresponse.send(event, context, cfnresponse.SUCCESS, {}, physicalResourceId)
-      runtime: python3.12
+      Runtime: python3.12
       Handler: index.lambda_handler
       Timeout: 60
       Role: !GetAtt LambdaRemovePermissionsRole.Arn
@@ -474,7 +474,7 @@ Resources:
             except:
               traceback.print_last()
               cfnresponse.send(event, context, cfnresponse.FAIL, {}, "An error occured, please refer to the last exception")
-      runtime: python3.12
+      Runtime: python3.12
       Handler: index.handler
       Timeout: 60
       Role: !GetAtt LambdaDeployRole.Arn
